[gd_scene load_steps=9 format=3 uid="uid://bcrasb8ynqf7p"]

[ext_resource type="Texture2D" uid="uid://bdgy56g2mwmtg" path="res://addons/meshpainter/icons/bucket-selected.svg" id="1"]
[ext_resource type="Texture2D" uid="uid://di7rh4ec511px" path="res://addons/meshpainter/icons/bucket.svg" id="2"]
[ext_resource type="Texture2D" uid="uid://duokslclqnes6" path="res://addons/meshpainter/icons/eraser.svg" id="3"]
[ext_resource type="Texture2D" uid="uid://dhl1hyah58245" path="res://addons/meshpainter/icons/brush.svg" id="4"]
[ext_resource type="Texture2D" uid="uid://513m8rkua7oj" path="res://addons/meshpainter/icons/brush-selected.svg" id="5"]
[ext_resource type="Texture2D" uid="uid://ddwnmqelecfa6" path="res://addons/meshpainter/icons/eraser-selected.svg" id="6"]
[ext_resource type="Script" path="res://addons/meshpainter/emission_panel.gd" id="7"]
[ext_resource type="PackedScene" uid="uid://cdq04ihbsugad" path="res://addons/meshpainter/layer_button.tscn" id="9"]

[node name="E" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("7")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_right = 1024.0
offset_bottom = 600.0

[node name="Label" type="Label" parent="VBoxContainer"]
offset_right = 1024.0
offset_bottom = 26.0
text = "Emission"

[node name="Modes" type="HBoxContainer" parent="VBoxContainer"]
offset_top = 30.0
offset_right = 1024.0
offset_bottom = 46.0

[node name="BrushButton" type="TextureButton" parent="VBoxContainer/Modes"]
offset_right = 16.0
offset_bottom = 16.0
toggle_mode = true
texture_normal = ExtResource("4")
texture_pressed = ExtResource("5")

[node name="BucketButton" type="TextureButton" parent="VBoxContainer/Modes"]
offset_left = 20.0
offset_right = 36.0
offset_bottom = 16.0
toggle_mode = true
texture_normal = ExtResource("2")
texture_pressed = ExtResource("1")

[node name="EraserButton" type="TextureButton" parent="VBoxContainer/Modes"]
offset_left = 40.0
offset_right = 56.0
offset_bottom = 16.0
toggle_mode = true
texture_normal = ExtResource("3")
texture_pressed = ExtResource("6")

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
offset_top = 50.0
offset_right = 1024.0
offset_bottom = 54.0

[node name="ColorContainer" type="GridContainer" parent="VBoxContainer"]
offset_top = 58.0
offset_right = 1024.0
offset_bottom = 190.0
columns = 2

[node name="LayerButton" parent="VBoxContainer/ColorContainer" instance=ExtResource("9")]
custom_minimum_size = Vector2(64, 64)
button_mask = 3
type = "emission"

[node name="LayerButton2" parent="VBoxContainer/ColorContainer" instance=ExtResource("9")]
custom_minimum_size = Vector2(64, 64)
offset_left = 68.0
offset_right = 132.0
button_mask = 3
type = "emission"
layer_nb = 1

[node name="LayerButton3" parent="VBoxContainer/ColorContainer" instance=ExtResource("9")]
custom_minimum_size = Vector2(64, 64)
offset_top = 68.0
offset_bottom = 132.0
button_mask = 3
type = "emission"
layer_nb = 2

[node name="LayerButton4" parent="VBoxContainer/ColorContainer" instance=ExtResource("9")]
offset_left = 68.0
offset_top = 68.0
offset_right = 132.0
offset_bottom = 132.0
button_mask = 3
type = "emission"
layer_nb = 3

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
offset_top = 194.0
offset_right = 1024.0
offset_bottom = 198.0

[node name="IntensityContainer" type="VBoxContainer" parent="VBoxContainer"]
offset_top = 202.0
offset_right = 1024.0
offset_bottom = 248.0

[node name="Label" type="Label" parent="VBoxContainer/IntensityContainer"]
offset_right = 1024.0
offset_bottom = 26.0
text = "Intensity"

[node name="IntensitySlider" type="HSlider" parent="VBoxContainer/IntensityContainer"]
offset_top = 30.0
offset_right = 1024.0
offset_bottom = 46.0
min_value = 0.01
max_value = 0.99
step = 0.01
value = 0.1

[node name="SizeContainer" type="VBoxContainer" parent="VBoxContainer"]
offset_top = 252.0
offset_right = 1024.0
offset_bottom = 298.0

[node name="Label" type="Label" parent="VBoxContainer/SizeContainer"]
offset_right = 1024.0
offset_bottom = 26.0
text = "Size"

[node name="SizeSlider" type="HSlider" parent="VBoxContainer/SizeContainer"]
offset_top = 30.0
offset_right = 1024.0
offset_bottom = 46.0
min_value = 0.01
max_value = 0.99
step = 0.01
value = 0.1

[connection signal="pressed" from="VBoxContainer/Modes/BrushButton" to="." method="_on_BrushButton_pressed"]
[connection signal="pressed" from="VBoxContainer/Modes/BucketButton" to="." method="_on_BucketButton_pressed"]
[connection signal="pressed" from="VBoxContainer/Modes/EraserButton" to="." method="_on_EraserButton_pressed"]
[connection signal="selected" from="VBoxContainer/ColorContainer/LayerButton" to="." method="_on_LayerButton_selected"]
[connection signal="value_changed" from="VBoxContainer/ColorContainer/LayerButton" to="." method="_on_LayerButton_value_changed"]
[connection signal="selected" from="VBoxContainer/ColorContainer/LayerButton2" to="." method="_on_LayerButton2_selected"]
[connection signal="value_changed" from="VBoxContainer/ColorContainer/LayerButton2" to="." method="_on_LayerButton2_value_changed"]
[connection signal="selected" from="VBoxContainer/ColorContainer/LayerButton3" to="." method="_on_LayerButton3_selected"]
[connection signal="value_changed" from="VBoxContainer/ColorContainer/LayerButton3" to="." method="_on_LayerButton3_value_changed"]
[connection signal="selected" from="VBoxContainer/ColorContainer/LayerButton4" to="." method="_on_LayerButton4_selected"]
[connection signal="value_changed" from="VBoxContainer/ColorContainer/LayerButton4" to="." method="_on_LayerButton4_value_changed"]
[connection signal="value_changed" from="VBoxContainer/IntensityContainer/IntensitySlider" to="." method="_on_IntensitySlider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/SizeContainer/SizeSlider" to="." method="_on_SizeSlider_value_changed"]
